--- a/pages/help.html
+++ b/pages/help.html
@@ -11,9 +11,9 @@
       <p>There are two types of documents:</p>
       <ul>
          <li>Unnamed documents: published within a Ethereum or Polygon transaction.</li>
-         <li>Named documents: published on <a href="https://google.com" target="_blank">this Polygon contract</a>.</li>
+         <li><a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Named document', 'help/named_document')">Named documents</a>: published on <a href="https://google.com" target="_blank">this Polygon contract</a>.</li>
       </ul>
-      <p style="margin-top:12px;">The content of a document can be plain text or HTML.</p>
+      <p style="margin-top:12px;">The content of a document can be plain text, <a href="https://github.com/document-do/html-document" target="_blank">HTML</a> or a <a href="https://github.com/document-do/router" target="_blank">router</a>.</p>
    </div>
 
    <div class="help_qa" id="hlp_draft">
@@ -26,6 +26,13 @@
       </ul>
    </div>
 
+   <div class="help_qa" id="hlp_unnamed_document">
+      <div class="title">How to open a unnamed document?</div>
+      <p>Format: [transaction hash].[network symbol]</p>
+      <p>Polygon example: <a href="#0xfd07d08878aa8c7814156f091a4473c42d6e821a626e02c11195714c87e5ff6d.pol">0xfd07d08878aa8c7814156f091a4473c42d6e821a626e02c11195714c87e5ff6d<strong>.pol</strong></a></p>
+      <p>Ethereum example: <a href="#0x2d6a7b0f6adeff38423d4c62cd8b6ccb708ddad85da5d3d06756ad4d8a04a6a2.eth">0x2d6a7b0f6adeff38423d4c62cd8b6ccb708ddad85da5d3d06756ad4d8a04a6a2<strong>.eth</strong></a></p>
+   </div>
+
    <div class="help_qa" id="hlp_publish">
       <div class="title">How to publish a document?</div>
       <ul style="margin-top:0;">
@@ -34,7 +41,7 @@
       </ul>
    </div>
 
-   <div class="help_qa" id="hlp_publish">
+   <div class="help_qa" id="hlp_publish_html">
       <div class="title">How to publish a HTML document?</div>
       <p><a href="https://github.com/document-do/html-document" target="_blank">Open docs</a></p>
    </div>
