--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -1,4 +1,8 @@
-<p>
-   <strong>We don't store or log any user data</strong>, except when you buy a named document.
-   When you buy a named document we store your IP, ETH/BTC address, the document name and the owners Polygon address.
-</p>
+<div id="help">
+   <div class="help_qa help_qa_open" id="hlp_privacy" style="background:none;padding:0;">
+   <p>
+      <strong>We don't store or log any user data</strong>, except when you buy a named document.
+      When you buy a named document we store your IP, ETH/BTC address, the document name and the owners Polygon address.
+   </p>
+   </div>
+</div>
