--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,3 +1,8 @@
+<div id="help">
+   <div class="help_qa help_qa_open" id="hlp_privacy" style="background:none;padding:0;"><p>
 do@document.do<br>
 <a href="https://www.reddit.com/r/documentdo/" target="_blank">Reddit</a><br>
 <a href="https://twitter.com/document_do" target="_blank">Twitter</a>
+</p>
+</div>
+</div>
