--- a/pages/help/document.html
+++ b/pages/help/document.html
@@ -3,8 +3,8 @@
       <p>There are two types of documents:</p>
       <ul>
          <li>Unnamed documents: published within a Ethereum or Polygon transaction.</li>
-         <li>Named documents: published on <a href="https://google.com" target="_blank">this Polygon contract</a>.</li>
+         <li><a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Named document', 'help/named_document')">Named documents</a>: published on <a href="https://google.com" target="_blank">this Polygon contract</a>.</li>
       </ul>
-      <p style="margin-top:12px;">The content of a document can be plain text or HTML.</p>
+      <p style="margin-top:12px;">The content of a document can be plain text, <a href="https://github.com/document-do/html-document" target="_blank">HTML</a> or a <a href="https://github.com/document-do/router" target="_blank">router</a>.</p>
    </div>
 </div>
