--- a/pages/help/publish.html
+++ b/pages/help/publish.html
@@ -1,5 +1,8 @@
 <div id="help">   <div class="help_qa help_qa_open" id="hlp_publish">
-      <div class="title">How to publish a HTML document?</div>
-      <p><a href="https://github.com/document-do/html-document" target="_blank">Open docs</a></p>
+      <div class="title">How to publish a document?</div>
+      <ul style="margin-top:0;">
+         <li><a href="https://scribehow.com/" target="_blank">Untitled document</a></li>
+         <li><a href="https://scribehow.com/" target="_blank">Named document</a></li>
+      </ul>
    </div>
 </div>
