--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>document.do</title>
-      <link rel="stylesheet" href="min.css?1679988568" media="all">
-      <script src="min.js?1679988568"></script>
-      <meta http-equiv="Content-Security-Policy" content="default-src 'self' eth.public-rpc.com rpc.ankr.com;img-src 'self' data:;script-src 'self' 'unsafe-inline';style-src 'self' 'unsafe-inline';" />
+      <title>document.do - Publish decentralized documents to Polygon</title>
+      <link rel="stylesheet" href="min.css?1681212660" media="all">
+      <script src="min.js?1681212660"></script>
+      <meta http-equiv="Content-Security-Policy" content="default-src 'self' rpc.ankr.com;img-src 'self' data:;script-src 'self' 'unsafe-inline';style-src 'self' 'unsafe-inline';" />
       <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
    </head>
    <body>
       <div id="document_">
 
          <div id="main" class="clear">
-            <input id="name_" type="text" placeholder="document name or transaction hash" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" oninput="d.name.change()">
+            <input id="name_" type="text" placeholder="type here" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" oninput="d.name.change()">
             <div id="error_"></div>
             <div id="home">
                <h1>document<span>.do</span></h1>
-               <p>Enter any document name or <a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Unnamed document', 'help/unnamed_document')">transaction hash</a> to open a decentralized document or draft.</p>
+               <p>Enter any document name to open a decentralized document.</p>
                <p id="jsreq">You need to enable JavaScript for document.do to work.</p>
                <script>jsreq.style.display = 'none';</script>
                <span class="help_icon" onclick="d.help.open()">?</span>
@@ -29,7 +29,7 @@
             <div id="dcontent">
                <div id="dcontent_inner"></div>
                <span class="info info-help" onclick="d.help.open()">?</span>
-               <span onclick="d.doc.showDetails()" class="info">i</span>
+               <span onclick="d.showDetails()" class="info">i</span>
                <div id="share" class="clear">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" onclick="d.copy()"><path d="M30.3 13.7L25 8.4l-5.3 5.3-1.4-1.4L25 5.6l6.7 6.7z"/><path d="M24 7h2v21h-2zm11 33H15c-1.7 0-3-1.3-3-3V19c0-1.7 1.3-3 3-3h7v2h-7a.94.94 0 0 0-1 1v18a.94.94 0 0 0 1 1h20a.94.94 0 0 0 1-1V19a.94.94 0 0 0-1-1h-7v-2h7c1.7 0 3 1.3 3 3v18c0 1.7-1.3 3-3 3z"/></svg>
                   <span>Document link copied!</span>
@@ -40,25 +40,21 @@
          </div>
          <div id="publish" class="publish clear">
             <div class="view_back" onclick="d.view.open('main', 'right')"></div>
-            <h2>Own the document <span class="docname"></span></h2>
-            <ul class="pros">
-               <li>Only you can <a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Named document','help/named_document')">control this document</a>.</li>
-               <li>Buy it once, you own it for life.</li>
-               <li>100% <a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Named document','help/named_document')">decentralized</a>.</li>
-               <li>Starting <a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Pricing', 'help/pricing')">from $5</a>.</li>
-            </ul>
-            <div onclick="d.publish.confirm()" class="button button-blanc">Skip this step</div>
-            <div onclick="d.publish.name()" class="button button-yellow">Buy for <span id="priceb"></span></div>
-         </div>
-         <div id="publish_name" class="publish clear">
-            <div class="view_back" onclick="d.view.open('publish', 'right')"></div>
-            <h2>The address you enter will own the document <span class="docname"></span>.</h2>
-            <input id="polygon_address" class="textinput" type="text" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" placeholder="Polygon address"  oninput="d.publish.addressChange()">
-            <div>
-               <span class="checkbox" id="accept_terms" onclick="this.classList.toggle('checkbox-checked');d.publish.addressChange()">I accept the <a onclick="d.help.buyTerms()">terms</a></span>
+            <div class="publish_block publish_block_top">
+               <h2>Publish and own <span class="docname"></span></h2>
+               <ul class="pros">
+                  <li>Only you <a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Documents','help/document')">control the document</a>.</li>
+                  <li>Buy it once, own it for life.</li>
+               </ul>
+               <div onclick="d.contract.buyDocument()" class="button button-yellow">Publish and own for <span id="priceb"></span></div>
             </div>
-            <div onclick="d.publish.btc.pay()" class="button button-yellow button-disabled">Buy with Bitcoin</div>
-            <div onclick="d.publish.eth.pay()" class="button button-yellow button-disabled">Buy with Ether</div>
+            <div class="publish_block">
+               <h2>Publish <span class="docname"></span></h2>
+               <ul class="pros">
+                  <li class="neg">Anyone can modify the document.</li>
+               </ul>
+               <div onclick="d.contract.editDocument()" class="button button-blue">Publish for free</div>
+            </div>
          </div>
          <div id="slidein_wrapper">
             <div id="slidein_">
