--- a/pages/help.html
+++ b/pages/help.html
@@ -2,42 +2,29 @@
 
    <div class="help_qa" id="hlp_about">
       <div class="title">What is document.do?</div>
-      <p>Document.do let you read and create documents on Ethereum and Polygon.</p>
+      <p>Document.do let you read and publish decentralized documents with <a href="https://polygonscan.com/address/0xBdA842a879f3c8EB9aE389424999a71a84155a60" target="_blank">this Polygon contract</a>.</p>
    </div>
 
 
    <div class="help_qa" id="hlp_document">
       <div class="title">Documents?</div>
-      <p>There are two types of documents:</p>
+      <p>Documents are published in <a href="https://polygonscan.com/address/0xBdA842a879f3c8EB9aE389424999a71a84155a60" target="_blank">this contract</a>. The contract is deployed on Polygon and unowned by anyone, so it is completely decentralized.</p>
+      <p>Documents can be:</p>
       <ul>
-         <li>Unnamed documents: published within a Ethereum or Polygon transaction.</li>
-         <li><a onclick="d.slidein.open('<a onclick=\'d.help.open()\'>Help</a> &#8250; Named document', 'help/named_document')">Named documents</a>: published on <a href="https://google.com" target="_blank">this Polygon contract</a>.</li>
+         <li>Plain text</li>
+         <li><a href="https://github.com/document-do/html-document" target="_blank">HTML documents</a></li>
+         <li>Unowned - anyone can edit the document.</li>
+         <li>Owned - Only the owner of the document can edit (or sell) it. No one else. Not document.do, no one. 100% censorship proof.</li>
       </ul>
-      <p style="margin-top:12px;">The content of a document can be plain text, <a href="https://github.com/document-do/html-document" target="_blank">HTML</a> or a <a href="https://github.com/document-do/router" target="_blank">router</a>.</p>
    </div>
 
    <div class="help_qa" id="hlp_draft">
       <div class="title">Drafts?</div>
-      <p>A draft is automaticly created when a named document isn't found. About drafts:</p>
+      <p>A draft is automaticly created when a document isn't published yet. About drafts:</p>
       <ul>
-         <li>Encrypted in your browser with the name.</li>
+         <li>Encrypted in your browser with the document name.</li>
          <li>Anyone with the name can edit the draft. Don't use drafts to safe sensitive information.</li>
          <li>Saved automaticly on centralized servers.</li>
-      </ul>
-   </div>
-
-   <div class="help_qa" id="hlp_unnamed_document">
-      <div class="title">How to open a unnamed document?</div>
-      <p>Format: [transaction hash].[network symbol]</p>
-      <p>Polygon example: <a href="#0xfd07d08878aa8c7814156f091a4473c42d6e821a626e02c11195714c87e5ff6d.pol">0xfd07d08878aa8c7814156f091a4473c42d6e821a626e02c11195714c87e5ff6d<strong>.pol</strong></a></p>
-      <p>Ethereum example: <a href="#0x2d6a7b0f6adeff38423d4c62cd8b6ccb708ddad85da5d3d06756ad4d8a04a6a2.eth">0x2d6a7b0f6adeff38423d4c62cd8b6ccb708ddad85da5d3d06756ad4d8a04a6a2<strong>.eth</strong></a></p>
-   </div>
-
-   <div class="help_qa" id="hlp_publish">
-      <div class="title">How to publish a document?</div>
-      <ul style="margin-top:0;">
-         <li><a href="https://scribehow.com/" target="_blank">Untitled document</a></li>
-         <li><a href="https://scribehow.com/" target="_blank">Named document</a></li>
       </ul>
    </div>
 
@@ -46,19 +33,9 @@
       <p><a href="https://github.com/document-do/html-document" target="_blank">Open docs</a></p>
    </div>
 
-   <div class="help_qa" id="hlp_named_document">
-      <div class="title">Named documents</div>
-      <p>Named documents are published in <a href="https://google.com" target="_blank">this contract</a>.
-         The contract is deployed on Polygon and unowned by anyone, so it is completely decentralized.</p>
-      <ul style="margin-top:0;">
-         <li>Only the owner of a named document can control it. No one else. Not document.do, no one. 100% censorship proof.</li>
-         <li>The owner can edit the contents of the document, change the owner or destroy the document.</li>
-      </ul>
-   </div>
-
    <div class="help_qa" id="hlp_pricing">
       <div class="title">Pricing</div>
-      <p>You can publish unnamed documents for free. We ask a fee for named documents to keep document.do running and to prefend one party to buy all names.</p>
+      <p>You can publish documents for free. We ask a fee if you want to own a document. The fee helps to keep document.do running and prefends one party to own all documents.</p>
       <div class="tablewrap">
          <div class="tablemover" onclick="d.help.scroll()"></div>
          <table id="pricetable">
@@ -114,16 +91,16 @@
                </tr>
                <tr>
                   <td>2</td>
-                  <td>$2,500</td>
+                  <td>$990</td>
                   <td>$500</td>
                   <td>$200</td>
                   <td>$200</td>
                </tr>
                <tr>
                   <td>1</td>
-                  <td>$4,500</td>
-                  <td>$4,000</td>
-                  <td>$3,000</td>
+                  <td>$2,500</td>
+                  <td>$1,500</td>
+                  <td>$500</td>
                   <td>-</td>
                </tr>
             </tbody>
@@ -133,7 +110,10 @@
 
    <div class="help_qa" id="hlp_offensive_document">
       <div class="title">Document X is offensive/illegal</div>
-      <p>We don't control the documents. They are published on Polygon and Ethereum. Unnamed documents are pernament. Named documents can only be changed by the owner of the document.<br><br>We can't block documents. Your browser connects directly to the blockchain without document.do as middleman.</p>
+      <ul style="margin-top:12px;">
+         <li>Unowned documents - If you find something you don't like, just modify the content and publish it.</li>
+         <li>Owned documents - Owned documents can only be modified by the document owner. Others (including document.do) can't.<br><br>We can't block documents. Your browser connects directly to the blockchain without document.do as middleman.</li>
+      </ul>
    </div>
 
    <div class="help_qa" id="hlp_offensive_draft">
