--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -1,8 +1,7 @@
 <div id="help">
    <div class="help_qa help_qa_open" id="hlp_privacy" style="background:none;padding:0;">
    <p>
-      <strong>We don't store or log any user data</strong>, except when you buy a named document.
-      When you buy a named document we store your IP, ETH/BTC address, the document name and the owners Polygon address.
+      <strong>We don't store or log any user data</strong>. Document.do runs on Cloudfare. They may store data (<a href="https://www.cloudflare.com/resources/assets/slt3lc6tev37/2PpV3ceAMWJLMlXvDvGaWH/4fdc05639e8f8b664b225ab6b596d26b/how_the_cloudflare_network_maintains_data_privacy.pdf" target="_blank">PDF</a>) like your IP address.
    </p>
    </div>
 </div>
